ใส่คำอธิบาย Data

--- a/Project_SUKUNA.ipynb
+++ b/Project_SUKUNA.ipynb
@@ -40,6 +40,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5UhZGNEJk097"
+      },
+      "source": [
+        "ที่มาของข้อมูล : https://data.go.th/dataset/mnp, https://data.go.th/dataset/number-mobile, https://data.go.th/dataset/fix-line และ https://opendata.data.go.th/uk/dataset/district2"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "l_NKW1anHukD"
@@ -47,7 +56,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,7 +72,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +91,7 @@
       "source": [
         "import os #os เอาไว้จัดการไฟล์และ path"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -93,7 +102,7 @@
       "source": [
         "path = '/content/drive/My Drive/DWDM2021_DATA'"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,7 +115,7 @@
         "garbage = pd.read_csv(os.path.join(path, 'garbage.csv'))\n",
         "moveinmoveout = pd.read_csv(os.path.join(path, 'moveinmoveout.csv'))"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -131,7 +140,7 @@
       "source": [
         "population"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1141,6 +1150,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "fL0Owl1ellmg"
+      },
+      "source": [
+        "**dcode = PK ของตาราง คือเขตภายในกรุงเทพมหานคร**\n",
+        "\n",
+        "**population48 = จำนวนประชากรในปี 2548**  \n",
+        "\n",
+        "**population48 = จำนวนประชากรในปี 2549  เป็นต้น**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "-s097hmCRp81"
       },
       "source": [
@@ -1160,7 +1182,7 @@
       "source": [
         "garbage"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2397,6 +2419,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "-BmYKQiXniLn"
+      },
+      "source": [
+        "**dcode = PK ของตาราง คือเขตภายในกรุงเทพมหานคร**\n",
+        "\n",
+        "**garbage53 = ปริมาณขยะของกรุงเทพในปี 2553**  \n",
+        "\n",
+        "**garbageperday53 = ปริมาณขยะของกรุงเทพต่อวันในปี 2553  เป็นต้น**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "fIplo6AHRr3U"
       },
       "source": [
@@ -2416,7 +2451,7 @@
       "source": [
         "moveinmoveout"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3732,6 +3767,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "rArr5L7-n3od"
+      },
+      "source": [
+        "**dcode = PK ของตาราง คือเขตภายในกรุงเทพมหานคร**\n",
+        "\n",
+        "**movein52 = จำนวนคนที่ย้ายเข้ากรุงเทพในปี 2552**  \n",
+        "\n",
+        "**moveout52 = จำนวนคนที่ย้ายออกจากกรุงเทพในปี 2552  เป็นต้น**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "ztJdEbTyGNYZ"
       },
       "source": [
@@ -3742,17 +3790,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "HnXgxNqTGSyA",
-        "outputId": "8f22da18-ce1f-474e-d9ed-d6ffb12190ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "8f22da18-ce1f-474e-d9ed-d6ffb12190ab"
       },
       "source": [
         "moveinmoveout_new = moveinmoveout.sort_values(by=['dcode'],ascending=True)\n",
         "moveinmoveout_new"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5086,7 +5134,7 @@
       "source": [
         "population.isnull().any()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5136,7 +5184,7 @@
       "source": [
         "garbage.isnull().any()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5190,7 +5238,7 @@
       "source": [
         "moveinmoveout.isnull().any()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5251,7 +5299,7 @@
       "source": [
         "population.drop(['population60'], axis=1, inplace=True)"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5267,7 +5315,7 @@
       "source": [
         "population"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6240,7 +6288,7 @@
       "source": [
         "population.drop(['population48', 'population49', 'population50' ,'population51' ,'population52'], axis=1, inplace=True)"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6256,7 +6304,7 @@
       "source": [
         "population"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6974,7 +7022,7 @@
       "source": [
         "garbage.drop(['garbage60','garbageperday60'], axis=1, inplace=True)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6990,7 +7038,7 @@
       "source": [
         "garbage"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8128,7 +8176,7 @@
       "source": [
         "moveinmoveout_new.drop(['movein60','moveout60'], axis=1, inplace=True)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8144,7 +8192,7 @@
       "source": [
         "moveinmoveout_new"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9372,7 +9420,7 @@
       "source": [
         "moveinmoveout_new.drop(['movein52','moveout52'], axis=1, inplace=True)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9388,7 +9436,7 @@
       "source": [
         "moveinmoveout_new"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10514,7 +10562,7 @@
       "source": [
         "garbage.drop(['garbageperday53','garbageperday54','garbageperday55','garbageperday56','garbageperday57','garbageperday58','garbageperday59','garbageperday61'], axis=1, inplace=True)"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10530,7 +10578,7 @@
       "source": [
         "garbage"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11267,7 +11315,7 @@
         "merged_table = population.merge(garbage,how='left',left_on='dcode',right_on='dcode') #แบบอาจารย์\n",
         "merged_table"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12390,7 +12438,7 @@
         "tablepop_garbage = pd.merge(population, garbage,how='left', on='dcode') #ใช้ on เนื่องจากตารางทั้งสองมีตำแหน่งคอลัมน์ร่วมกันซึ่งใช้เป็นคีย์ในการรวมข้อมูล (dcode)\n",
         "tablepop_garbage"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -13507,7 +13555,7 @@
       "source": [
         "tablepop_garb_moveinout = pd.merge(tablepop_garbage, moveinmoveout_new,how='left', on='dcode')"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -13523,7 +13571,7 @@
       "source": [
         "tablepop_garb_moveinout"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15471,7 +15519,7 @@
         "MaxGar61 = tablepop_garb_moveinout.sort_values(by=['garbage61'],ascending=False)\n",
         "MaxGar61.iloc[:1,[0,16]]"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15542,7 +15590,7 @@
         "MinGar61 = tablepop_garb_moveinout.sort_values(by=['garbage61'],ascending=True)\n",
         "MinGar61.iloc[:1,[0,16]]"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15607,23 +15655,32 @@
       "source": [
         "district = pd.read_csv(os.path.join(path, 'district.csv'))"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LtH8LPAjm2E8"
+      },
+      "source": [
+        "### **ตารางชื่อเขตภายในกรุงเทพมหานคร**"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "_BkH-Pa3G71n",
-        "outputId": "17ad38ad-cd95-471d-854e-0cdf3073a05f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "17ad38ad-cd95-471d-854e-0cdf3073a05f"
       },
       "source": [
         "district"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15966,19 +16023,30 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "O6iyQfCdmZ0w"
+      },
+      "source": [
+        "**dcode = PK ของตาราง คือรหัสเขตภายในกรุงเทพมหานคร**\n",
+        "\n",
+        "**dname = FK ของตาราง คือชื่อเขตภายในกรุงเทพมหานคร**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "rue-oZY9IPvL",
-        "outputId": "421c87d9-4bd6-4ffc-a9be-c474c165a6c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "421c87d9-4bd6-4ffc-a9be-c474c165a6c5"
       },
       "source": [
         "garbage"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -16709,23 +16777,23 @@
       "source": [
         "garbage_new = garbage.drop(0, axis=0)"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "wTTa22fSJJtt",
-        "outputId": "61bb95f6-507e-4fe5-cc4c-587f3000d654",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "61bb95f6-507e-4fe5-cc4c-587f3000d654"
       },
       "source": [
         "garbage_new"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -17439,17 +17507,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "KwrQWZ6kJca9",
-        "outputId": "51bca84b-dc59-4486-b1ad-5f295af46cb1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "51bca84b-dc59-4486-b1ad-5f295af46cb1"
       },
       "source": [
         "pop_district = pd.merge(district, population,how='left', on='dcode')\n",
         "pop_district"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -18204,6 +18272,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "E0k8mcg7odqB"
+      },
+      "source": [
+        "**dcode = PK ของตาราง คือเขตภายในกรุงเทพมหานคร**\n",
+        "\n",
+        "**dname = FK ของตาราง คือชื่อเขตภายในกรุงเทพมหานคร**\n",
+        "\n",
+        "**population53 = จำนวนประชากรคนกรุงเทพในปี 2553**  \n",
+        "\n",
+        "**population54 = จำนวนประชากรคนกรุงเทพในปี 2554  เป็นต้น**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "0Xiv1kN_J5t0"
       },
       "source": [
@@ -18214,15 +18297,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "Pzm-p3NqJ5Kc",
-        "outputId": "c2201b8e-3985-42dc-b354-3bdd55179e6a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c2201b8e-3985-42dc-b354-3bdd55179e6a"
       },
       "source": [
         "pop_district.isnull().any()"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -18268,17 +18351,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "fFTee8L5LvfL",
-        "outputId": "592cf7d2-2175-46fe-a2b5-2dfaa095a327",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "592cf7d2-2175-46fe-a2b5-2dfaa095a327"
       },
       "source": [
         "pop_gar = pd.merge(pop_district, garbage_new,how='left', on='dcode')\n",
         "pop_gar"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -19441,6 +19524,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "c2_MKEdXo_VQ"
+      },
+      "source": [
+        "**dcode = PK ของตาราง คือเขตภายในกรุงเทพมหานคร**\n",
+        "\n",
+        "**dname = FK ของตาราง คือชื่อเขตภายในกรุงเทพมหานคร**\n",
+        "\n",
+        "**population53 = จำนวนประชากรคนกรุงเทพในปี 2553**  \n",
+        "\n",
+        "**garbage53 = ปริมาณขยะของกรุงเทพในปี 2553  เป็นต้น**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "u8FZWmXUL9xU"
       },
       "source": [
@@ -19451,15 +19549,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "f4A4TTHNL-IK",
-        "outputId": "a28f63b6-c7b9-4498-92df-f568298565a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a28f63b6-c7b9-4498-92df-f568298565a3"
       },
       "source": [
         "pop_gar.isnull().any()"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -19513,17 +19611,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "3wM21uk7MOTl",
-        "outputId": "47eda30a-eadc-4de3-badf-b9c97122533e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "47eda30a-eadc-4de3-badf-b9c97122533e"
       },
       "source": [
         "pop_gar_moveinout = pd.merge(pop_gar, moveinmoveout_new,how='left', on='dcode')\n",
         "pop_gar_moveinout"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -21502,7 +21600,26 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ePtg3qgRMoXx"
+        "id": "TFO2JlW2pTvv"
+      },
+      "source": [
+        "**dcode = PK ของตาราง คือเขตภายในกรุงเทพมหานคร**\n",
+        "\n",
+        "**dname = FK ของตาราง คือชื่อเขตภายในกรุงเทพมหานคร**\n",
+        "\n",
+        "**population53 = จำนวนประชากรคนกรุงเทพในปี 2553**  \n",
+        "\n",
+        "**garbage53 = ปริมาณขยะของกรุงเทพในปี 2553**\n",
+        "\n",
+        "**movein = จำนวนคนที่ย้ายเข้ากรุงเทพในปี 2553**\n",
+        "\n",
+        "**moveout = จำนวนคนที่ย้ายออกจากกรุงเทพในปี 2553 เป็นต้น**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WvPU9WbbpXCV"
       },
       "source": [
         "### เช็คว่ามีค่า Missing มั้ย"
@@ -21512,15 +21629,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "Tf6spcX-MotT",
-        "outputId": "52b994bd-a756-410d-800f-cef5ee9bbf9f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "52b994bd-a756-410d-800f-cef5ee9bbf9f"
       },
       "source": [
         "pop_gar_moveinout.isnull().any()"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
