--- a/MiniExam.ipynb
+++ b/MiniExam.ipynb
@@ -54,7 +54,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -64,13 +64,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FtfT3pF0PL2x",
-        "outputId": "2f7c1c86-6056-4289-dab6-20346cda8e2e"
+        "outputId": "824cb990-8f63-4bd2-80c0-a78824412c52"
       },
       "source": [
         "from google.colab import drive \n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,7 +89,7 @@
       "source": [
         "import os"
       ],
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -100,7 +100,7 @@
       "source": [
         "path = '/content/drive/My Drive/DWDM2021_DATA'"
       ],
-      "execution_count": 13,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -108,16 +108,16 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 436
+          "height": 419
         },
         "id": "rDBac0rqPpVY",
-        "outputId": "e500b7d9-589d-401c-8868-3f7cfd37025f"
+        "outputId": "1a733c72-c2ed-4edc-d1f2-4631c318ba52"
       },
       "source": [
         "flights = pd.read_csv(os.path.join(path,'flights.csv'))\n",
         "flights"
       ],
-      "execution_count": 42,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -284,7 +284,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 5
         }
       ]
     },
@@ -292,17 +292,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "XKmDsSw1O3-0",
-        "outputId": "4ec2727b-a6f7-4e72-9586-930df5aec8ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        }
+        },
+        "outputId": "45890489-6550-435b-965c-dda62071a849"
       },
       "source": [
         "airports = pd.read_csv(os.path.join(path,'airports.csv'))\n",
         "airports"
       ],
-      "execution_count": 15,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -433,7 +433,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 6
         }
       ]
     },
@@ -449,7 +449,7 @@
         "    b = int(ID[-1])%3\n",
         "    print(f'รหัสนักศึกษา {ID} ทำข้อ {a} และ {b if a != b else 5-b}')"
       ],
-      "execution_count": 16,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -468,12 +468,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zQQAtm8fZPYE",
-        "outputId": "775b5bbe-37b3-494c-a00a-a7501132630e"
+        "outputId": "77bb80ad-91bf-4e4b-be5a-3bccce92bb85"
       },
       "source": [
         "gen_exams('623020042-0')"
       ],
-      "execution_count": 17,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -497,16 +497,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "P7jNlxWHZTCp",
-        "outputId": "81c065bd-28dd-4764-bb94-86d96af0fe65",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 436
-        }
+          "height": 419
+        },
+        "outputId": "9ed5dd7e-0a8d-42c2-af18-cef3386b7a95"
       },
       "source": [
         "flights.isnull()"
       ],
-      "execution_count": 18,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -673,7 +673,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 9
         }
       ]
     },
@@ -681,15 +681,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "cq9kolEXQNne",
-        "outputId": "94c5f8cd-0d40-495f-881f-772a1017f215",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "41a3b58b-3995-43f1-fd10-cb9b1d5c6f1f"
       },
       "source": [
         "flights.isnull().any()"
       ],
-      "execution_count": 19,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -706,7 +706,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 10
         }
       ]
     },
@@ -714,16 +714,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "TIrarRAjQQg2",
-        "outputId": "da871006-465f-47b2-9789-5ad994e6f892",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        }
+        },
+        "outputId": "17d96131-1c5a-4e1d-f5c1-850216120c27"
       },
       "source": [
         "airports.isnull()"
       ],
-      "execution_count": 20,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -854,7 +854,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 11
         }
       ]
     },
@@ -862,15 +862,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "CDd3h4RyQW3S",
-        "outputId": "74ed6e31-2d68-4cae-e620-7dd692295f72",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "38071db6-2328-4947-8552-442ea998d572"
       },
       "source": [
         "airports.isnull().any()"
       ],
-      "execution_count": 21,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -884,7 +884,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 12
         }
       ]
     },
@@ -910,17 +910,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "5bZkTuPjQa9s",
-        "outputId": "d0b68114-ba5e-4941-aae1-bbc1325f8b9b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 674
-        }
+          "height": 419
+        },
+        "outputId": "5abe5174-b805-4be0-bc46-b4f0947c65f2"
       },
       "source": [
         "arrive_plane = flights.merge(airports,how='left',left_on='รหัสสนามบินปลายทาง',right_on='รหัสสนามบิน')\n",
         "arrive_plane #how คือเอาตารางไหนเป็นตารางหลัก จะเห็นได้ว่ารหัสสนามบินปลายทางและรหัสสนามบิน มีรหัสที่ตรงกันเพราะการเชื่อมตาราง"
       ],
-      "execution_count": 43,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1135,7 +1135,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 13
         }
       ]
     },
@@ -1156,7 +1156,7 @@
       "source": [
         "arrive_plane.drop(['รหัสสนามบินต้นทาง'], axis=1, inplace=True)"
       ],
-      "execution_count": 47,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1172,16 +1172,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "XoCh4_42Yw4T",
-        "outputId": "bc25113c-8955-4156-9ba6-bf3356814124",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 589
-        }
+          "height": 419
+        },
+        "outputId": "91627370-7f5b-4774-eb80-cb913223c9c4"
       },
       "source": [
         "arrive_plane"
       ],
-      "execution_count": 48,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1384,7 +1384,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 15
         }
       ]
     },
@@ -1401,15 +1401,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "ugz8T2ZYZa86",
-        "outputId": "e2f3ab10-ae67-4d9c-e1fc-24778a10c74b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "481e7e3c-157a-4aab-839a-24cbd35ae89b"
       },
       "source": [
         "arrive_plane.isnull().any()"
       ],
-      "execution_count": 51,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1429,7 +1429,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 51
+          "execution_count": 16
         }
       ]
     },
@@ -1446,17 +1446,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "BUDtuqgfYLzb",
-        "outputId": "2ebedfb2-9353-4c45-aefd-67d906b28be2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 623
-        }
+          "height": 419
+        },
+        "outputId": "1cd492d9-a876-4b04-de6d-9e9eaf039d12"
       },
       "source": [
         "outbound_plane = flights.merge(airports,how='left',left_on='รหัสสนามบินต้นทาง',right_on='รหัสสนามบิน')\n",
         "outbound_plane #how คือเอาตารางไหนเป็นตารางหลัก จะเห็นได้ว่ารหัสสนามบินต้นทางและรหัสสนามบิน มีรหัสที่ตรงกันเพราะการเชื่อมตาราง"
       ],
-      "execution_count": 46,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1671,7 +1671,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 17
         }
       ]
     },
@@ -1692,7 +1692,7 @@
       "source": [
         "outbound_plane.drop(['รหัสสนามบินปลายทาง'], axis=1, inplace=True)"
       ],
-      "execution_count": 49,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1708,16 +1708,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "J1fEfCQPY4rc",
-        "outputId": "625d2b2e-37df-4016-bb91-d38e0941aaf5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 589
-        }
+          "height": 419
+        },
+        "outputId": "c8f9e318-970c-4c15-c095-8385ff54a7da"
       },
       "source": [
         "outbound_plane"
       ],
-      "execution_count": 50,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1920,7 +1920,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 50
+          "execution_count": 19
         }
       ]
     },
@@ -1937,15 +1937,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "Sd_bLeXMZs1I",
-        "outputId": "687e7eb1-b884-4c1e-e455-4031b04e0e72",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6df4d579-0dbc-406e-c739-1c0a84f1e492"
       },
       "source": [
         "outbound_plane.isnull().any()"
       ],
-      "execution_count": 52,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1965,7 +1965,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 20
         }
       ]
     },
@@ -2000,17 +2000,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "ml9RVxN0aWaN",
-        "outputId": "3a1e8eab-e4cb-4e88-d056-819ff1c0e593",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 111
-        }
+        },
+        "outputId": "1ac404e3-aa62-4e44-fb3c-a1b1878cc45b"
       },
       "source": [
         "MaxArrive = arrive_plane.groupby('รัฐ').count().sort_values(by=['รหัสสนามบินปลายทาง'],ascending=False) #ascending=False คือเรียงจากมากไปน้อย\n",
         "MaxArrive.iloc[:1,[3]]"
       ],
-      "execution_count": 65,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2057,7 +2057,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 65
+          "execution_count": 21
         }
       ]
     },
@@ -2083,17 +2083,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "q77q5XTic3IW",
-        "outputId": "4e810c63-3f23-4543-f21c-d7a27429ea1c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 111
-        }
+        },
+        "outputId": "17f4ea28-3425-4919-c05e-158c0ed26f80"
       },
       "source": [
         "MinArrive = arrive_plane.groupby('รัฐ').count().sort_values(by=['รหัสสนามบินปลายทาง'],ascending=True) #ascending=False คือเรียงจากน้อยไปมาก\n",
         "MinArrive.iloc[:1,[3]]"
       ],
-      "execution_count": 66,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2140,7 +2140,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 66
+          "execution_count": 22
         }
       ]
     },
@@ -2166,17 +2166,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "HpHhqgWBdcPF",
-        "outputId": "a0e5a722-63b9-47f5-8b3c-1018aeb0aea8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
-        }
+        },
+        "outputId": "9d8eb255-35ca-4113-96aa-8c55e110bff5"
       },
       "source": [
         "MaxDay = arrive_plane.groupby('วันในสัปดาห์').count().sort_values(by=['รหัสสนามบินปลายทาง'],ascending=False) #ascending=False คือเรียงจากมากไปน้อย\n",
         "MaxDay.iloc[:,[2]]"
       ],
-      "execution_count": 70,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2253,7 +2253,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 70
+          "execution_count": 23
         }
       ]
     },
@@ -2277,16 +2277,13 @@
         "\n",
         "**วันในสัปดาห์ (7) คือ วันอาทิตย์ มีเครื่องบินขาเข้าทั้งหมด 372,228 ลำ**\n",
         "\n",
-        "**วันในสัปดาห์ (6) คือ วันเสาร์ มีเครื่องบินขาเข้าทั้งหมด 318,537 ลำ**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "HFIdLafYl85o"
-      },
-      "source": [
-        ""
+        "**วันในสัปดาห์ (6) คือ วันเสาร์ มีเครื่องบินขาเข้าทั้งหมด 318,537 ลำ**\n",
+        "\n",
+        "**จะได้เป็นวันธรรมดามีเครื่องบินขาเข้าทั้งหมด 2,011,453 ลำ**\n",
+        "\n",
+        "**และวันเสาร์-อาทิตย์มีเครื่องบินขาเข้าทั้งหมด 690,765 ลำ**\n",
+        "\n",
+        "**ดังนั้นวันธรรมดาจึงมีจำนวนเครื่องบินขาเข้ามากกว่าวันเสาร์-อาทิตย์**"
       ]
     },
     {
@@ -2295,13 +2292,50 @@
         "id": "oJ22FVJ_g7o3"
       },
       "source": [
-        "### **(ข้อที่คิดเอง) สายการบินไหนไปที่เมือง Detroit มากที่สุดและน้อยที่สุด**"
+        "### **(ข้อที่คิดเอง) หาวันในสัปดาห์เฉลี่ยของสายการบิน DL**"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hUpWlRwJhIkX"
+        "id": "hUpWlRwJhIkX",
+        "outputId": "bcb05853-41ad-48c3-e8bf-98d909f77258",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "Date = arrive_plane['สายการบิน'] == 'DL'\n",
+        "Date_mean = arrive_plane[Date]['วันในสัปดาห์'].mean()\n",
+        "Date_mean"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.9203447074205373"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NZVQVM-bxz5v"
+      },
+      "source": [
+        "**สายการบิน DL ออกเที่ยวบินเฉลี่ยเป็นวันที่ 3 ในสัปดาห์ หรือวันพุธ**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "INvknJbCv9NQ"
       },
       "source": [
         ""
