--- a/Chap_8_Clustering.ipynb
+++ b/Chap_8_Clustering.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chap 8 Clustering.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOI3CzCgj/bjV67v3wSXux9",
+      "authorship_tag": "ABX9TyPn4aYcLMTcerEJycDHfkGk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
       "source": [
         "from sklearn.datasets import make_blobs"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -64,7 +64,7 @@
       "source": [
         "X, y = make_blobs(n_samples=500, centers=3, n_features=2, random_state=6)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -79,7 +79,7 @@
       "source": [
         "X.shape"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -107,7 +107,7 @@
         "from matplotlib import pyplot as plt\n",
         "plt.scatter(X[:,0],X[:,1])"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -159,7 +159,7 @@
       "source": [
         "from sklearn.cluster import KMeans"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -179,7 +179,7 @@
       "source": [
         "kmeans = KMeans(n_clusters=2, random_state=6)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -203,7 +203,7 @@
       "source": [
         "kmeans.fit(X)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -227,7 +227,7 @@
       "source": [
         "y_clust = kmeans.fit_predict(X)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -242,7 +242,7 @@
       "source": [
         "y_clust"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -300,7 +300,7 @@
       "source": [
         "plt.scatter(X[:,0],X[:,1], c=y_clust)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -353,7 +353,7 @@
         "#plot\n",
         "plt.scatter(X[:,0],X[:,1], c=y_clust)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -406,7 +406,7 @@
         "#plot\n",
         "plt.scatter(X[:,0],X[:,1], c=y_clust)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -459,7 +459,7 @@
         "#plot\n",
         "plt.scatter(X[:,0],X[:,1], c=y_clust)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -503,7 +503,7 @@
         "#plot\n",
         "plt.scatter(X[:,0],X[:,1], c=y_clust)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -547,7 +547,7 @@
         "import cv2\n",
         "import os"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -558,7 +558,7 @@
       "source": [
         "img = cv2.imread('/content/istockphoto-455663609-612x612.jpg')"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -573,7 +573,7 @@
       "source": [
         "img.shape"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -601,7 +601,7 @@
         "RGB_img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
         "plt.imshow(RGB_img)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -644,7 +644,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -659,7 +659,7 @@
       "source": [
         "np.unique(np.reshape(RGB_img,(RGB_img.shape[0]*RGB_img.shape[1],3)),axis=0).shape #มี 43,285 สี"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -690,7 +690,7 @@
       "source": [
         "myquantize = KMeans(n_clusters=16, random_state=6)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -715,7 +715,7 @@
         "img_row = np.reshape(RGB_img,(RGB_img.shape[0]*RGB_img.shape[1],3))\n",
         "img_row.shape"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -737,7 +737,7 @@
       "source": [
         "final_color = myquantize.fit_predict(img_row)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -757,7 +757,7 @@
       "source": [
         "centroid = myquantize.cluster_centers_"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -772,7 +772,7 @@
       "source": [
         "centroid"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -821,7 +821,7 @@
         "    for j in range(RGB_img.shape[1]):\n",
         "      new_img[i,j,:] = centroid[myquantize.predict([RGB_img[i,j,:]]),:]"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -837,7 +837,7 @@
       "source": [
         "plt.imshow(new_img/255)"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -871,7 +871,7 @@
       "source": [
         "plt.imsave('img.jpg',new_img/255)"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -887,7 +887,7 @@
       "source": [
         "plt.imshow(RGB_img)"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -930,7 +930,7 @@
       "source": [
         "myquantize2 = KMeans(n_clusters=8, random_state=6)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -955,7 +955,7 @@
         "img_row2 = np.reshape(RGB_img,(RGB_img.shape[0]*RGB_img.shape[1],3))\n",
         "img_row2.shape"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -977,7 +977,7 @@
       "source": [
         "final_color = myquantize2.fit_predict(img_row)"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -991,7 +991,7 @@
         "    for j in range(RGB_img.shape[1]):\n",
         "      new_img2[i,j,:] = centroid[myquantize2.predict([RGB_img[i,j,:]]),:]"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1007,7 +1007,7 @@
       "source": [
         "plt.imshow(new_img2/255)"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1031,6 +1031,37 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dKe7phMDslp9"
+      },
+      "source": [
+        "### **Hierachical Clustering**\n",
+        "\n",
+        "https://scikit-learn.org/stable/auto_examples/cluster/plot_agglomerative_dendrogram.html#sphx-glr-auto-examples-cluster-plot-agglomerative-dendrogram-py"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v1iivei7sqFN"
+      },
+      "source": [
+        "### **Clustering Evaluation**\n",
+        "\n",
+        "https://scikit-learn.org/stable/modules/clustering.html#clustering-performance-evaluation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VE3o39yhsv1q"
+      },
+      "source": [
+        ""
       ]
     }
   ]
